--- a/events.html
+++ b/events.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>The Leaf Church</title>
@@ -13,88 +14,98 @@
     <!-- css files for current page only -->
     <link href='css/fullcalendar.css' rel='stylesheet' />
     <link href='css/fullcalendar.print.css' rel='stylesheet' media='print' />
+
+    <!-- CDNs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-	<div id="preloader"></div>
+    <div id="preloader"></div>
     <div id="wrapper">
-        <!-- header begin -->
-        <header>
-            <div class="container">
-                <span id="menu-btn"></span>
-                <div class="row">
-                    <div class="col-md-3">
+            <nav class="navbar navbar-expand-lg bg-white fixed-top shadow-sm border-0">
+                <div class="container">
+                    <!-- Brand -->
+                    <a class="navbar-brand d-flex align-items-center" href="index.html">
+                        <img src="img/logo/logo-new-2.png" alt="The Leaf Church" style="height:40px" class="me-2">
+                    </a>
 
-                        <!-- logo begin -->
-                        <div id="logo">
-                            <div class="inner">
-                                <a href="index.html">
-                                    <img src="img/logo/logo-new.png" alt="" class="logo-1">
-                                    <img src="img/logo/logo-new-2.png" alt="" class="logo-2">
-                                </a>
-
-                            </div>
-                        </div>
-                        <!-- logo close -->
-
+                    <!-- Desktop links -->
+                    <div class="collapse navbar-collapse d-none d-lg-flex">
+                        <ul class="navbar-nav ms-auto align-items-center gap-2">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                            <li class="nav-item"><a class="nav-link" href="sermons.html">Sermons</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Donate</a></li>
+                            <li class="nav-item ms-2">
+                                <div class="d-flex align-items-center gap-3 fs-5">
+                                    <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                            class="fa fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                            class="fa fa-instagram"></i></a>
+                                    <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                            class="fa fa-youtube-play"></i></a>
+                                    <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                            class="fa fa-google"></i></a>
+                                    <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                            class="fa fa-envelope-o"></i></a>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
 
-                    <div class="col-md-9">
+                    <!-- Mobile toggler -->
+                    <button class="navbar-toggler border-0 d-lg-none" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#mobileNav" aria-controls="mobileNav" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
 
-                        <!-- mainmenu begin -->
-                        <div id="mainmenu-container">
-                            <ul id="mainmenu">
-                                <li><a href="index.html">Home</a>
-                                    <!-- <ul>
-                                        <li><a href="index.html">Homepage 1</a></li>
-                                        <li><a href="index-2.html">Homepage 2</a></li>
-                                        <li><a href="index-3.html">Homepage 3</a></li>
-                                    </ul> -->
-                                </li>
-                                <li><a href="events.html">Events</a>
-                                    <!-- <ul>
-                                        <li><a href="events.html">Events List</a></li>
-                                        <li><a href="events-calendar.html">Events Calendar</a></li>
-                                        <li><a href="event-single.html">Single Page</a></li>
-                                    </ul> -->
-                                </li>
-                                <li><a href="sermons.html">Sermons</a>
-                                    <!-- <ul>
-                                        <li><a href="sermons.html">Sermons List</a></li>
-                                        <li><a href="sermon-single.html">Single Page</a></li>
-                                    </ul> -->
-                                </li>
-                                <!-- <li><a href="features.html">Features</a></li>
-                                <li><a href="news.html">News</a>
-									<ul>
-                                        <li><a href="news.html">News List</a></li>
-                                        <li><a href="news-single.html">Single Page</a></li>
-                                    </ul>
-								</li> -->
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="">Donate</a></li>
-                            </ul>
+            <!-- Spacer under fixed nav -->
+            <!-- <div style="height:74px"></div> -->
+
+            <!-- Offcanvas mobile menu -->
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel"
+                data-bs-scroll="true" data-bs-backdrop="true">
+                <div class="offcanvas-header border-bottom">
+                    <h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+
+                <div class="offcanvas-body d-flex flex-column">
+                    <ul class="navbar-nav fs-5">
+                        <li class="nav-item"><a class="nav-link py-2" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="events.html">Events</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    </ul>
+
+                    <!-- social bottom -->
+                    <hr style="height:0;" class="my-4 p-0" />
+                    <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4"
+                        href="#">Donate</a>
+                    <hr style="height:0;" class="mt-4 mb-5 p-0" />
+                    <div class="mt-auto text-center">
+
+                        <div class="d-flex justify-content-center gap-4 fs-4">
+                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-youtube-play"></i></a>
+                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                    class="fa fa-google"></i></a>
+                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                    class="fa fa-envelope-o"></i></a>
                         </div>
-                        <!-- mainmenu close -->
-
-                        <!-- social icons -->
-                        <div class="social">
-                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i class="fa fa-instagram"></i></a>
-                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i class="fa fa-youtube-play"></i></a>
-                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                            <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i class="fa fa-google"></i></a>
-                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
-                        </div>
-                        <!-- social icons close -->
-
                     </div>
                 </div>
             </div>
-
-        </header>
         <!-- header close -->
 
         <!-- subheader begin -->
@@ -123,16 +134,19 @@
                                 <img src="img/events/pic (1).jpg" alt="">
                             </div>
                             <div class="right-col">
-                                <span class="date">06</span>
-                                <span class="month">FEB</span>
-                                <span class="time">08:00 am</span>
+                                <!-- <span class="date">06</span> -->
+                                <span class="month">SUN</span>
+                                <span class="time">11AM & 6PM</span>
                             </div>
                         </div>
                         <div class="desc">
                             <a href="#">
-                                <h3>Family Baptism Class</h3>
+                                <h3>Sunday Service</h3>
                             </a>
-                            <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                            <span class="text">Join us every Sunday for a spirit-filled worship service as we
+                                        gather to praise, learn, and grow
+                                        together in Christ. Stay after for fellowship and a delicious meal — all are
+                                        welcome at the table!
                             </span>
                         </div>
                     </div>
@@ -154,7 +168,9 @@
                             <a href="#">
                                 <h3>Transforming Live</h3>
                             </a>
-                            <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                            <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip.
                             </span>
                         </div>
                     </div>
@@ -176,7 +192,9 @@
                             <a href="#">
                                 <h3>Relationship With God</h3>
                             </a>
-                            <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                            <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip.
                             </span>
                         </div>
                     </div>
@@ -260,10 +278,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        &copy; Copyright 2025 - The Leaf Church by 
-<a href="https://campbellscode.com" target="_blank" rel="noopener noreferrer">
-    Campbell's Code
-</a>
+                        &copy; Copyright 2025 - The Leaf Church by
+                        <a href="https://campbellscode.com" target="_blank" rel="noopener noreferrer">
+                            Campbell's Code
+                        </a>
 
                     </div>
                     <div class="col-md-6">
@@ -286,12 +304,12 @@
 
     <!-- LOAD JS FILES -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/easing.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
-    <script src="js/selectnav.js"></script>
+    <!-- <script src="js/selectnav.js"></script> -->
     <script src="js/ender.js"></script>
     <script src="js/responsiveslides.min.js"></script>
     <script src="js/owl.carousel.js"></script>
@@ -302,7 +320,8 @@
     <script src="js/moment.min.js"></script>
     <script src="js/fullcalendar.min.js"></script>
     <script src="js/fullcalendar-settings.js"></script>
-    <script src="js/wow.min.js"></script>	
+    <script src="js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/custom.js"></script>
 
     <!-- SLIDER REVOLUTION SCRIPTS  -->
@@ -311,4 +330,5 @@
     <script src="js/rev-setting-1.js"></script>
 
 </body>
+
 </html>
