--- a/index.html
+++ b/index.html
@@ -10,93 +10,103 @@
 
     <!-- LOAD CSS FILES -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/custom.css" rel="stylesheet" type="text/css">
+
+    <!-- CDNs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="preloader"></div>
+
     <div id="wrapper">
-        <!-- header begin -->
-        <header>
-            <div class="container">
-                <span id="menu-btn"></span>
-                <div class="row">
-                    <div class="col-md-3">
+            <nav class="navbar navbar-expand-lg bg-white fixed-top shadow-sm border-0">
+                <div class="container">
+                    <!-- Brand -->
+                    <a class="navbar-brand d-flex align-items-center" href="index.html">
+                        <img src="img/logo/logo-new-2.png" alt="The Leaf Church" style="height:40px" class="me-2">
+                    </a>
 
-                        <!-- logo begin -->
-                        <div id="logo">
-                            <div class="inner">
-                                <a href="index.html">
-                                    <img src="img/logo/logo-new.png" alt="" class="logo-1">
-                                    <img src="img/logo/logo-new-2.png" alt="" class="logo-2">
-                                </a>
-
-                            </div>
-                        </div>
-                        <!-- logo close -->
-
+                    <!-- Desktop links -->
+                    <div class="collapse navbar-collapse d-none d-lg-flex">
+                        <ul class="navbar-nav ms-auto align-items-center gap-2">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                            <li class="nav-item"><a class="nav-link" href="sermons.html">Sermons</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Donate</a></li>
+                            <li class="nav-item ms-2">
+                                <div class="d-flex align-items-center gap-3 fs-5">
+                                    <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                            class="fa fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                            class="fa fa-instagram"></i></a>
+                                    <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                            class="fa fa-youtube-play"></i></a>
+                                    <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                            class="fa fa-google"></i></a>
+                                    <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                            class="fa fa-envelope-o"></i></a>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
 
-                    <div class="col-md-9">
+                    <!-- Mobile toggler -->
+                    <button class="navbar-toggler border-0 d-lg-none" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#mobileNav" aria-controls="mobileNav" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
 
-                        <!-- mainmenu begin -->
-                        <div id="mainmenu-container">
-                            <ul id="mainmenu">
-                                <li><a href="index.html">Home</a>
-                                    <!-- <ul>
-                                        <li><a href="index.html">Homepage 1</a></li>
-                                        <li><a href="index-2.html">Homepage 2</a></li>
-                                        <li><a href="index-3.html">Homepage 3</a></li>
-                                    </ul> -->
-                                </li>
-                                <li><a href="events.html">Events</a>
-                                    <!-- <ul>
-                                        <li><a href="events.html">Events List</a></li>
-                                        <li><a href="events-calendar.html">Events Calendar</a></li>
-                                        <li><a href="event-single.html">Single Page</a></li>
-                                    </ul> -->
-                                </li>
-                                <li><a href="sermons.html">Sermons</a>
-                                    <!-- <ul>
-                                        <li><a href="sermons.html">Sermons List</a></li>
-                                        <li><a href="sermon-single.html">Single Page</a></li>
-                                    </ul> -->
-                                </li>
-                                <!-- <li><a href="features.html">Features</a></li>
-                                <li><a href="news.html">News</a>
-                                    <ul>
-                                        <li><a href="news.html">News List</a></li>
-                                        <li><a href="news-single.html">Single Page</a></li>
-                                    </ul>
-                                </li> -->
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="">Donate</a></li>
-                            </ul>
-                        </div>
-                        <!-- mainmenu close -->
+            <!-- Spacer under fixed nav -->
+            <!-- <div style="height:74px"></div> -->
 
-                        <!-- social icons -->
-                        <div class="social">
+            <!-- Offcanvas mobile menu -->
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel"
+                data-bs-scroll="true" data-bs-backdrop="true">
+                <div class="offcanvas-header border-bottom">
+                    <h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+
+                <div class="offcanvas-body d-flex flex-column">
+                    <ul class="navbar-nav fs-5">
+                        <li class="nav-item"><a class="nav-link py-2" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="events.html">Events</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    </ul>
+
+                    <!-- social bottom -->
+                    <hr style="height:0;" class="my-4 p-0" />
+                    <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4"
+                        href="#">Donate</a>
+                    <hr style="height:0;" class="mt-4 mb-5 p-0" />
+                    <div class="mt-auto text-center">
+
+                        <div class="d-flex justify-content-center gap-4 fs-4">
                             <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
                                     class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                             <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
                                     class="fa fa-youtube-play"></i></a>
-                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                            <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
                             <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
                                     class="fa fa-google"></i></a>
                             <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
                                     class="fa fa-envelope-o"></i></a>
                         </div>
-                        <!-- social icons close -->
-
                     </div>
                 </div>
             </div>
 
-        </header>
+        <!-- header begin -->
+
         <!-- header close -->
 
         <!-- slider -->
@@ -632,7 +642,7 @@
 
     <!-- LOAD JS FILES -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/easing.js"></script>
@@ -645,6 +655,7 @@
     <script src="js/jquery.countdown.js"></script>
     <script src="js/countdown-custom.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/custom.js"></script>
 
     <!-- SLIDER REVOLUTION SCRIPTS  -->
